--- a/package.json
+++ b/package.json
@@ -7,15 +7,15 @@
     "npm": "1.2"
   },
   "dependencies": {
-    "docpad": "~6.52.1",
-    "docpad-plugin-eco": "~2.0.2",
-    "docpad-plugin-marked": "~2.1.1",
-    "docpad-plugin-livereload": "~2.5.3",
-    "docpad-plugin-paged": "~2.2.2",
-    "docpad-plugin-highlightjs": "~2.1.7",
-    "moment": "~2.2.1",
-    "docpad-plugin-partials": "~2.8.0",
-    "docpad-plugin-jade": "~2.6.0"
+    "docpad": "~6.78.4",
+    "docpad-plugin-eco": "~2.1.0",
+    "docpad-plugin-highlightjs": "~2.3.0",
+    "docpad-plugin-jade": "~2.10.0",
+    "docpad-plugin-livereload": "~2.7.1",
+    "docpad-plugin-marked": "~2.3.0",
+    "docpad-plugin-paged": "~2.4.0",
+    "docpad-plugin-partials": "~2.9.2",
+    "moment": "~2.2.1"
   },
   "main": "node_modules/docpad/bin/docpad-server",
   "scripts": {
