--- a/package.json
+++ b/package.json
@@ -7,15 +7,15 @@
     "npm": "1.2"
   },
   "dependencies": {
-    "docpad": "~6.78.4",
-    "docpad-plugin-eco": "~2.1.0",
-    "docpad-plugin-highlightjs": "~2.3.0",
-    "docpad-plugin-jade": "~2.10.0",
-    "docpad-plugin-livereload": "~2.7.1",
-    "docpad-plugin-marked": "~2.3.0",
-    "docpad-plugin-paged": "~2.4.0",
-    "docpad-plugin-partials": "~2.9.2",
-    "moment": "~2.2.1"
+    "docpad": "^6.79.0",
+    "docpad-plugin-eco": "^2.1.0",
+    "docpad-plugin-highlightjs": "^2.4.0",
+    "docpad-plugin-jade": "^2.10.0",
+    "docpad-plugin-livereload": "^2.7.1",
+    "docpad-plugin-marked": "^2.3.0",
+    "docpad-plugin-paged": "^2.4.0",
+    "docpad-plugin-partials": "^2.9.2",
+    "moment": "^2.17.1"
   },
   "main": "node_modules/docpad/bin/docpad-server",
   "scripts": {
